# mnemo

./: .gitignore  MANIFEST.in  README.md  install-codex-plugin.sh  pyproject.toml
codex_plugin/: hooks.json
codex_plugin/.codex-plugin/: plugin.json
codex_plugin/scripts/: mnemo  post_write_record_activity.py
codex_plugin/skills/capture-session-memory/: SKILL.md
codex_plugin/skills/mnemo-memory/: SKILL.md
codex_plugin/skills/query-local-memory/: SKILL.md
codex_plugin/skills/refresh-memory-graph/: SKILL.md
codex_plugin/skills/review-memory-quality/: SKILL.md
codex_plugin/skills/sync-memory-vault/: SKILL.md
docs/: architecture.md  sync.md
mnemo/: __init__.py  cli.py  config.py  models.py  paths.py
mnemo/pipeline/: __init__.py  activity.py  capture.py  feedback.py  merge.py  query.py  queue.py  status.py
mnemo/store/: events.py  repository.py
mnemo/sync/: __init__.py  health.py  mirror.py
plugin/.claude-plugin/: plugin.json
plugin/commands/: mnemo-feedback.md  mnemo-merge.md  mnemo-query.md  mnemo-queue.md  mnemo-rebuild.md  mnemo-status.md  mnemo-sync.md  mnemo.md
plugin/hooks/: hooks.json
scripts/: install_codex_plugin.py
tests/: test_smoke.py
