[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo-local"
version = "0.1.0"
description = "Local-first memory for coding agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenAI Codex" }
]
license = { text = "MIT" }
dependencies = []

[project.scripts]
mnemo = "mnemo.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mnemo*"]

[tool.setuptools.package-data]
"plugin" = ["**/*"]
